[gd_scene load_steps=10 format=2]

[ext_resource path="res://Game.gd" type="Script" id=1]
[ext_resource path="res://objects/seamless space.PNG" type="Texture" id=2]
[ext_resource path="res://objects/trueno.tres" type="DynamicFont" id=3]
[ext_resource path="res://objects/paddleRed.png" type="Texture" id=4]
[ext_resource path="res://Paddle.gd" type="Script" id=5]
[ext_resource path="res://objects/paddleBlu.png" type="Texture" id=6]

[sub_resource type="CapsuleShape2D" id=1]
radius = 12.0
height = 80.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 280, 10 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10, 490 )

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="BackgroundColour" type="ColorRect" parent="."]
margin_left = -5.0
margin_top = -5.0
margin_right = 545.0
margin_bottom = 965.0
color = Color( 0, 0, 0, 1 )

[node name="Background" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.501961 )
position = Vector2( 270, 480 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 0, 0, 1024, 1024 )

[node name="Action" type="Label" parent="."]
margin_left = 100.0
margin_top = 870.0
margin_right = 440.0
margin_bottom = 914.0
custom_fonts/font = ExtResource( 3 )
text = "UP to launch"
align = 1

[node name="Left" type="Label" parent="."]
margin_left = 10.0
margin_top = 870.0
margin_right = 98.0
margin_bottom = 958.0
custom_fonts/font = ExtResource( 3 )
text = "<"
align = 1
valign = 1

[node name="Right" type="Label" parent="."]
margin_left = 442.0
margin_top = 870.0
margin_right = 530.0
margin_bottom = 958.0
custom_fonts/font = ExtResource( 3 )
text = ">"
align = 1
valign = 1

[node name="Score" type="Label" parent="."]
margin_left = 279.0
margin_top = 910.0
margin_right = 479.0
margin_bottom = 954.0
custom_fonts/font = ExtResource( 3 )
text = "00.00"

[node name="Lives" type="Node2D" parent="."]
editor/display_folded = true
position = Vector2( 166, 935 )
__meta__ = {
"_edit_group_": true
}

[node name="Life1" type="Sprite" parent="Lives"]
rotation = -0.523599
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )

[node name="Life2" type="Sprite" parent="Lives"]
position = Vector2( 40, 0 )
rotation = -0.523599
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )

[node name="Life3" type="Sprite" parent="Lives"]
position = Vector2( 80, 0 )
rotation = -0.523599
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )

[node name="Paddle" type="KinematicBody2D" parent="."]
editor/display_folded = true
position = Vector2( 270, 840 )
collision_layer = 2
collision_mask = 0
script = ExtResource( 5 )

[node name="RedPaddle" type="Sprite" parent="Paddle"]
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Paddle"]
rotation = 1.5708
shape = SubResource( 1 )

[node name="BluePaddle3" type="Sprite" parent="Paddle"]
position = Vector2( -56, 0 )
texture = ExtResource( 6 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Paddle"]
position = Vector2( 56, 0 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="BluePaddle2" type="Sprite" parent="Paddle"]
position = Vector2( 56, 0 )
texture = ExtResource( 6 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Paddle"]
position = Vector2( -56, 0 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="BluePaddle1" type="Sprite" parent="Paddle"]
texture = ExtResource( 6 )

[node name="PowerUps" type="Node2D" parent="."]

[node name="WallsNode" type="Node2D" parent="."]
editor/display_folded = true

[node name="Walls" type="StaticBody2D" parent="WallsNode"]
collision_layer = 2

[node name="Top" type="CollisionShape2D" parent="WallsNode/Walls"]
position = Vector2( 270, -10 )
shape = SubResource( 2 )

[node name="Left" type="CollisionShape2D" parent="WallsNode/Walls"]
position = Vector2( -10, 480 )
shape = SubResource( 3 )

[node name="Right" type="CollisionShape2D" parent="WallsNode/Walls"]
position = Vector2( 550, 480 )
shape = SubResource( 3 )

[node name="Balls" type="Node2D" parent="."]

[node name="Bullets" type="Node2D" parent="."]

[node name="Bricks" type="Node2D" parent="."]
